<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="addAddress">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="_6_000_us">$6,000 us</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="_3000_00">$3000.00</string>
    <string name="_1">1</string>
</resources>