<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imGoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/bg_ripple_dark_blue"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.25"
            android:gravity="end"
            android:text="@string/addAddress"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="@font/mark_pro" />

        <ImageView
            android:id="@+id/imMyCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/bg_optionally_button"
            android:padding="10dp"
            android:src="@drawable/ic_location" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/my_cart"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:fontFamily="@font/mark_pro"
        app:layout_constraintEnd_toEndOf="@id/llTitle"
        app:layout_constraintStart_toStartOf="@id/llTitle"
        app:layout_constraintTop_toBottomOf="@id/llTitle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_dark_blue_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyCart">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="220dp"
            android:paddingHorizontal="10dp"
            tools:listitem="@layout/item_cart_elem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="115dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:fontFamily="@font/mark_pro_regular" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/_6_000_us"
                    android:textColor="@color/white"
                    app:fontFamily="@font/mark_pro_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/delivery"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:fontFamily="@font/mark_pro_regular" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/free"
                    android:textColor="@color/white"
                    app:fontFamily="@font/mark_pro_bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white20" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_margin="35dp"
            android:backgroundTint="@color/optionally"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="10dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>